--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
+    "babel-plugin-root-import": "^6.6.0",
     "typescript": "^4.1.3"
   }
 }
