--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "postcss": "^8.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.1.3"
   }
 }
