--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "date-fns": "^2.16.1",
     "next": "10.0.4",
     "postcss": "^8.2.2",
     "react": "17.0.1",
